# webgpu_test

./: Cargo.toml  index.html
src/: color.wgsl  instance.rs  lib.rs  main.rs  state.rs  vertex.rs
